--- a/client/duel/index.html
+++ b/client/duel/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style rel="stylesheet" href="styles/main.css">  </style>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="../duel/Network/SDNetwork.js"></script>
     <script src="../p5.min.js"></script>
     <script src="../p5.collide2d.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
