adding game and duel models

--- a/client/duel/index.html
+++ b/client/duel/index.html
@@ -9,9 +9,10 @@
     <script src="../addons/p5.sound.min.js"></script>
     <script src="../duel/models/attack.js"></script>
     <script src="../duel/models/card.js"></script>
-    <script src="../duel/models/duel.js"></script>
+    <script src="../duel/models/Duel.js"></script>
     <script src="../duel/models/hand.js"></script>
-    <script src="../duel/game.js"></script>
+    <script src="../duel/models/Game.js"></script>    
+    <script src="../duel/sketch.js"></script>
 
 
   </head>
