--- a/client/duel/index.html
+++ b/client/duel/index.html
@@ -2,7 +2,16 @@
 <html>
   <head>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style rel="stylesheet" href="styles/main.css">  </style>
+    <style>
+
+      .logInOverlay {
+        background-color: #000000;
+        border-style: solid;
+        border-width: 2px;
+        border-color: #00ff00;
+      }
+    </style>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="../duel/Network/SDNetwork.js"></script>
     <script src="../p5.min.js"></script>
