--- a/client/duel/index.html
+++ b/client/duel/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style>
-
       .logInOverlay {
         background-color: #000000;
         border-style: solid;
@@ -14,6 +13,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="../duel/Network/SDNetwork.js"></script>
+    <script src="../duel/Network/socketRoutes.js"></script>
     <script src="../p5.min.js"></script>
     <script src="../p5.collide2d.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
