--- a/client/duel/index.html
+++ b/client/duel/index.html
@@ -14,6 +14,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="../duel/Network/SDNetwork.js"></script>
     <script src="../duel/Network/socketRoutes.js"></script>
+    <script src="../duel/Helpers/Enums.js"></script>
     <script src="../p5.min.js"></script>
     <script src="../p5.collide2d.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
