--- a/client/duel/index.html
+++ b/client/duel/index.html
@@ -15,14 +15,16 @@
     <script src="../duel/Network/SDNetwork.js"></script>
     <script src="../duel/Network/socketRoutes.js"></script>
     <script src="../duel/Helpers/Enums.js"></script>
+    <script src="../duel/Helpers/strings.js"></script>
     <script src="../p5.min.js"></script>
     <script src="../p5.collide2d.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
     <script src="../duel/models/attack.js"></script>
-    <script src="../duel/models/card.js"></script>
+    <script src="../duel/models/Card.js"></script>
     <script src="../duel/models/Duel.js"></script>
-    <script src="../duel/models/hand.js"></script>
+    <script src="../duel/models/Player.js"></script>
+    <script src="../duel/models/Hand.js"></script>
     <script src="../duel/models/Game.js"></script>    
     <script src="../duel/sketch.js"></script>
 
