--- a/client/duel/index.html
+++ b/client/duel/index.html
@@ -17,6 +17,7 @@
     <script src="../duel/Helpers/Enums.js"></script>
     <script src="../duel/Helpers/strings.js"></script>
     <script src="../duel/Helpers/defaults.js"></script>
+    <script src="../duel/Helpers/colors.js"></script>
     <script src="../p5.min.js"></script>
     <script src="../p5.collide2d.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
