--- a/client/duel/index.html
+++ b/client/duel/index.html
@@ -14,7 +14,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="../duel/Network/SDNetwork.js"></script>
     <script src="../duel/Network/socketRoutes.js"></script>
-    <script src="../duel/Helpers/defaults.js"></script>
+    <script src="../../server/Helpers/defaults.js"></script>
     <script src="../duel/Helpers/Enums.js"></script>
     <script src="../duel/Helpers/strings.js"></script>
     <script src="../duel/Helpers/colors.js"></script>
