--- a/client/index.html
+++ b/client/index.html
@@ -2,21 +2,21 @@
 <html>
   <head>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style>
-      .logInOverlay {
-        background-color: #000000;
-        border-style: solid;
-        border-width: 2px;
-        border-color: #00ff00;
-      }
-    </style>
+      <style>
+          .logInOverlay {
+              background-color: #000000;
+              border-style: solid;
+              border-width: 2px;
+              border-color: #00ff00;
+          }
+      </style>
 
       <script src="/socket.io/socket.io.js"></script>
 
-      <script src="./p5/p5.min.js"></script>
-      <script src="./p5/p5.collide2d.min.js"></script>
-      <script src="./p5/addons/p5.dom.min.js"></script>
-      <script src="./p5/addons/p5.sound.min.js"></script>
+    <script src="./p5/p5.min.js"></script>
+    <script src="./p5/p5.collide2d.min.js"></script>
+    <script src="./p5/addons/p5.dom.min.js"></script>
+    <script src="./p5/addons/p5.sound.min.js"></script>
 
       <script src="./Helpers/defaults.js"></script>
       <script src="./Helpers/colors.js"></script>
@@ -30,35 +30,42 @@
       <script src="./Models/Attack/Attack.animations.js"></script>
       <script src="./Models/Attack/Attack.icons.js"></script>
       <script src="./Models/Attack/Attack.strings.js"></script>
+      <script src="./Models/Attack/Attack.defaults.js"></script>
 
       <script src="./Models/Card/Card.model.js"></script>
       <script src="./Models/Card/Card.animations.js"></script>
       <script src="./Models/Card/Card.icons.js"></script>
       <script src="./Models/Card/Card.strings.js"></script>
+      <script src="./Models/Card/Card.colors.js"></script>
+      <script src="./Models/Card/Card.defaults.js"></script>
 
       <script src="./Models/Hand/Hand.model.js"></script>
       <script src="./Models/Hand/Hand.animations.js"></script>
       <script src="./Models/Hand/Hand.icons.js"></script>
       <script src="./Models/Hand/Hand.strings.js"></script>
+      <script src="./Models/Hand/Hand.defaults.js"></script>
 
       <script src="./Models/Game/Game.model.js"></script>
       <script src="./Models/Game/Game.animations.js"></script>
       <script src="./Models/Game/Game.icons.js"></script>
       <script src="./Models/Game/Game.strings.js"></script>
+      <script src="./Models/Game/Game.defaults.js"></script>
 
       <script src="./Models/Duel/Duel.model.js"></script>
       <script src="./Models/Duel/Duel.animations.js"></script>
       <script src="./Models/Duel/Duel.icons.js"></script>
       <script src="./Models/Duel/Duel.strings.js"></script>
+      <script src="./Models/Duel/Duel.defaults.js"></script>
 
       <script src="./Models/Player/Player.model.js"></script>
       <script src="./Models/Player/Player.animations.js"></script>
       <script src="./Models/Player/Player.icons.js"></script>
       <script src="./Models/Player/Player.strings.js"></script>
+      <script src="./Models/Player/Player.defaults.js"></script>
 
+      <script src="./logInView.js"></script>
       <script src="./sketch.js"></script>
   </head>
   <body>
-
   </body>
 </html>
