--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
       <style>
-          .logInOverlay {
+        body {padding: 0; margin: 0;}
+        .logInOverlay {
               background-color: #000000;
               border-style: solid;
               border-width: 2px;
