--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <script src="./Helpers/strings.js"></script>
       <script src="./Helpers/animations.js"></script>
       <script src="./Helpers/icons.js"></script>
+      <script src="./Helpers/helpers.js"></script>
 
       <script src="./Network/network.js"></script>
 
