--- a/client/index.html
+++ b/client/index.html
@@ -30,8 +30,10 @@
 
       <script src="./Models/Attack/Attack.model.js"></script>
       <script src="./Models/Attack/Attack.animations.js"></script>
-      <script src="./Models/Attack/Attack.icons.js"></script>
-      <script src="./Models/Attack/Attack.strings.js"></script>
+    <script src="./Models/Attack/Attack.icons.js"></script>
+    <script src="./Models/Attack/Attack.icons.js"></script>
+    <script src="./Models/Attack/Attack.strings.js"></script>
+    <script src="./Models/Attack/Attack.color.js"></script>
       <script src="./Models/Attack/Attack.defaults.js"></script>
 
       <script src="./Models/Card/Card.model.js"></script>
