hold while things break

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,11 @@
 
       <script src="./Network/network.js"></script>
 
+
+
+    <script src="./Models/Sprite/Sprite.model.js"></script>
+    <script src="./Models/FloatingText/FloatingText.model.js"></script>
+
       <script src="./Models/Attack/Attack.model.js"></script>
       <script src="./Models/Attack/Attack.animations.js"></script>
     <script src="./Models/Attack/Attack.icons.js"></script>
@@ -72,6 +77,7 @@
     <script src="Models/Animation/ValueAnimation.model.js"></script>
     <script src="Models/Animation/TranslationAnimation.model.js"></script>
     <script src="Models/Animation/ScaleAnimation.model.js"></script>
+    <script src="Models/Animation/FontSizeAnimation.model.js"></script>
 
       <script src="./logInView.js"></script>
       <script src="./sketch.js"></script>
