sube sprites are updating and the animations are smooth and relativly painless to implement

--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,12 @@
       <script src="./Models/Game/Game.strings.js"></script>
       <script src="./Models/Game/Game.colors.js"></script>
 
+      <script src="./Models/Duel/Duel.animations.js"></script>
+      <script src="./Models/Duel/Duel.defaults.js"></script>
+      <script src="./Models/Duel/Duel.icons.js"></script>
+      <script src="./Models/Duel/Duel.model.js"></script>
+      <script src="./Models/Duel/Duel.strings.js"></script>
+
 
       <script src="./Models/Hand/Hand.animations.js"></script>
       <script src="./Models/Hand/Hand.defaults.js"></script>
@@ -59,8 +65,12 @@
       <script src="./Models/Card/Card.icons.js"></script>
       <script src="./Models/Card/Card.model.js"></script>
       <script src="./Models/Card/Card.InHand.model.js"></script>
+      <script src="./Models/Card/Card.DuelCharacter.model.js"></script>
+      <script src="./Models/Card/Card.DuelPlayer.model.js"></script>
       <script src="./Models/Card/Card.colors.js"></script>
       <script src="./Models/Card/Card.strings.js"></script>
+
+
 
 
       <script src="./logInView.js"></script>
