--- a/client/index.html
+++ b/client/index.html
@@ -64,11 +64,28 @@
       <script src="./Models/Card/Card.defaults.js"></script>
       <script src="./Models/Card/Card.icons.js"></script>
       <script src="./Models/Card/Card.model.js"></script>
-      <script src="./Models/Card/Card.InHand.model.js"></script>
-      <script src="./Models/Card/Card.DuelCharacter.model.js"></script>
-      <script src="./Models/Card/Card.DuelPlayer.model.js"></script>
+      <script src="Models/Card/Card.InHand.view.js"></script>
+      <script src="Models/Card/Card.DuelCharacter.view.js"></script>
+      <script src="Models/Card/Card.DuelPlayer.view.js"></script>
       <script src="./Models/Card/Card.colors.js"></script>
       <script src="./Models/Card/Card.strings.js"></script>
+
+
+      <script src="./Models/Attack/Attack.animations.js"></script>
+      <script src="./Models/Attack/Attack.defaults.js"></script>
+      <script src="./Models/Attack/Attack.icons.js"></script>
+      <script src="./Models/Attack/Attack.model.js"></script>
+      <script src="./Models/Attack/Attack.DuelPlayer.view.js"></script>
+      <script src="./Models/Attack/Attack.strings.js"></script>
+      <script src="./Models/Attack/Attack.colors.js"></script>
+
+
+      <script src="./Models/Button/Button.animations.js"></script>
+      <script src="./Models/Button/Button.defaults.js"></script>
+      <script src="./Models/Button/Button.icons.js"></script>
+      <script src="./Models/Button/Button.strings.js"></script>
+      <script src="./Models/Button/Button.colors.js"></script>
+      <script src="./Models/Button/Button.LockIn.view.js"></script>
 
 
 
