--- a/client/index.html
+++ b/client/index.html
@@ -64,9 +64,11 @@
       <script src="./Models/Card/Card.defaults.js"></script>
       <script src="./Models/Card/Card.icons.js"></script>
       <script src="./Models/Card/Card.model.js"></script>
-      <script src="Models/Card/Card.InHand.view.js"></script>
-      <script src="Models/Card/Card.DuelCharacter.view.js"></script>
-      <script src="Models/Card/Card.DuelPlayer.view.js"></script>
+      <script src="./Models/Card/Card.InHand.view.js"></script>
+      <script src="./Models/Card/Card.DuelCharacter.view.js"></script>
+      <script src="./Models/Card/Card.DuelPlayer.view.js"></script>
+      <script src="./Models/Card/Card.DuelOpp.view.js"></script>
+      <script src="./Models/Card/Card.DuelStats.view.js"></script>
       <script src="./Models/Card/Card.colors.js"></script>
       <script src="./Models/Card/Card.strings.js"></script>
 
@@ -86,6 +88,9 @@
       <script src="./Models/Button/Button.strings.js"></script>
       <script src="./Models/Button/Button.colors.js"></script>
       <script src="./Models/Button/Button.LockIn.view.js"></script>
+
+
+      <script src="./Models/FloatingText/FloatingText.model.js"></script>
 
 
 
