somthing with the attack not being loaded first

--- a/client/index.html
+++ b/client/index.html
@@ -26,17 +26,17 @@
 
       <script src="./Network/network.js"></script>
 
-      <script src="./p5+/mouseStack.js"></script>
-      <script src="./p5+/Sprite/Sprite.model.js"></script>
-      <script src="./p5+/Sprite/Sprite.defaults.js"></script>
-      <script src="./p5+/Animation/Animation.model.js"></script>
-      <script src="./p5+/Animation/Animation.defaults.js"></script>
-      <script src="./p5+/Animation/KeyValue/KeyValue.model.js"></script>
-      <script src="./p5+/Animation/KeyValue/KeyValue.defaults.js"></script>
-      <script src="./p5+/Animation/ScaleAnimation/Scale.Animation.model.js"></script>
-      <script src="./p5+/Animation/ScaleAnimation/Scale.animation.defaults.js"></script>
-      <script src="./p5+/Animation/TranslationAnimation/Translation.Animation.model.js"></script>
-      <script src="./p5+/Animation/TranslationAnimation/Translation.Animation.defaults.js"></script>
+      <script src="p5pluss/mouseStack.js"></script>
+      <script src="p5pluss/Sprite/Sprite.model.js"></script>
+      <script src="p5pluss/Sprite/Sprite.defaults.js"></script>
+      <script src="p5pluss/Animation/Animation.model.js"></script>
+      <script src="p5pluss/Animation/Animation.defaults.js"></script>
+      <script src="p5pluss/Animation/KeyValue/KeyValue.model.js"></script>
+      <script src="p5pluss/Animation/KeyValue/KeyValue.defaults.js"></script>
+      <script src="p5pluss/Animation/ScaleAnimation/Scale.Animation.model.js"></script>
+      <script src="p5pluss/Animation/ScaleAnimation/Scale.animation.defaults.js"></script>
+      <script src="p5pluss/Animation/TranslationAnimation/Translation.Animation.model.js"></script>
+      <script src="p5pluss/Animation/TranslationAnimation/Translation.Animation.defaults.js"></script>
 
 
       <script src="./Models/Game/Game.animations.js"></script>
