--- a/client/index.html
+++ b/client/index.html
@@ -78,6 +78,7 @@
       <script src="./Models/Attack/Attack.icons.js"></script>
       <script src="./Models/Attack/Attack.model.js"></script>
       <script src="./Models/Attack/Attack.DuelPlayer.view.js"></script>
+     <script src="./Models/Attack/Attack.Combat.view.js"></script>
       <script src="./Models/Attack/Attack.strings.js"></script>
       <script src="./Models/Attack/Attack.colors.js"></script>
 
