about to break all the things;

--- a/client/index.html
+++ b/client/index.html
@@ -91,7 +91,8 @@
       <script src="./Models/Button/Button.LockIn.view.js"></script>
 
 
-      <script src="./Models/FloatingText/FloatingText.model.js"></script>
+    <script src="./Models/FloatingText/FloatingText.model.js"></script>
+    <script src="./Models/FloatingText/FloatingText.animations.js"></script>
 
 
 
