--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,8 @@
 
       <script src="p5pluss/mouseStack.js"></script>
       <script src="p5pluss/Sprite/Sprite.model.js"></script>
-      <script src="p5pluss/Sprite/Sprite.defaults.js"></script>
+    <script src="p5pluss/Sprite/Sprite.defaults.js"></script>
+    <script src="p5pluss/Sprite/Sprite.animations.js"></script>
       <script src="p5pluss/Animation/Animation.model.js"></script>
       <script src="p5pluss/Animation/Animation.defaults.js"></script>
       <script src="p5pluss/Animation/KeyValue/KeyValue.model.js"></script>
