loop done but need killing

--- a/client/index.html
+++ b/client/index.html
@@ -89,7 +89,8 @@
       <script src="./Models/Button/Button.icons.js"></script>
       <script src="./Models/Button/Button.strings.js"></script>
       <script src="./Models/Button/Button.colors.js"></script>
-      <script src="./Models/Button/Button.LockIn.view.js"></script>
+    <script src="./Models/Button/Button.LockIn.view.js"></script>
+    <script src="./Models/Button/Button.AcceptReuslt.view.js"></script>
 
 
     <script src="./Models/FloatingText/FloatingText.model.js"></script>
