stuck looking at the mutliplew abilities draft stage

--- a/client/html/game.html
+++ b/client/html/game.html
@@ -27,6 +27,7 @@
     <!--- Draft --->
     <script src="../javascript/views/Draft/draft.view.js"                                                     ></script>
     <script src="../javascript/views/Draft/archetype.draft.view.js"                                           ></script>
+    <script src="../javascript/views/Draft/title.draft.view.js"                                               ></script>
     <!--- Game --->
     <script src="../javascript/views/Game/game.view.js"                                                       ></script>
     <!--- sketch --->
