waiting for opp to draft

--- a/client/html/game.html
+++ b/client/html/game.html
@@ -27,6 +27,7 @@
     <!--- Character --->
     <script src="../javascript/views/Character/character.view.js"                                             ></script>
     <script src="../javascript/views/Character/player.bench.character.view.js"                                ></script>
+    <script src="../javascript/views/Character/wander.character.view.js"                                      ></script>
     <!--- Draft --->
     <script src="../javascript/views/Draft/draft.view.js"                                                     ></script>
     <script src="../javascript/views/Draft/archetype.draft.view.js"                                           ></script>
