--- a/client/html/debug.html
+++ b/client/html/debug.html
@@ -4,23 +4,39 @@
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
     <!--- Helpers --->
-    <script src="../javascript/helpers/globals.js"  ></script>
-    <script src="../javascript/helpers/helpers.js"  ></script>
-    <script src="../javascript/helpers/bundle.js"  ></script>
-    <script src="../javascript/helpers/colors.js"  ></script>
-    <script src="../javascript/helpers/icons.js"  ></script>
-    <script src="../javascript/helpers/strings.js"  ></script>
-    <script src="../javascript/helpers/defaults.js"  ></script>
+    <script src="../javascript/helpers/globals.js"                                                            ></script>
+    <script src="../javascript/helpers/helpers.js"                                                            ></script>
+    <script src="../javascript/helpers/bundle.js"                                                             ></script>
+    <script src="../javascript/helpers/colors.js"                                                             ></script>
+    <script src="../javascript/helpers/icons.js"                                                              ></script>
+    <script src="../javascript/helpers/strings.js"                                                            ></script>
+    <script src="../javascript/helpers/defaults.js"                                                           ></script>
     <!--- Network --->
-    <script src="/socket.io/socket.io.js"           ></script>
-    <script src="../javascript/helpers/network.js"  ></script>
+    <script src="/socket.io/socket.io.js"                                                                     ></script>
+    <script src="../javascript/helpers/network.js"                                                            ></script>
     <!--- p5 --->
-    <script src="../javascript/p5/p5.min.js"        ></script>
-    <script src="../javascript/p5/p5.dom.min.js"    ></script>
-    <script src="../javascript/p5/p5.sound.min.js"  ></script>
+    <script src="../javascript/p5/p5.min.js"                                                                  ></script>
+    <script src="../javascript/p5/p5.dom.min.js"                                                              ></script>
+    <script src="../javascript/p5/p5.sound.min.js"                                                            ></script>
     <!--- Views --->
-    <script src="../javascript/views/Sprite.js"          ></script>
-    <script src="../javascript/views/Field/biome.view.js"          ></script>
+    <script src="../javascript/views/Sprite.js"                                                               ></script>
+    <!--- Field Views --->
+    <script src="../javascript/views/Field/biome.view.js"                                                     ></script>
+    <script src="../javascript/views/Field/field.view.js"                                                     ></script>
+    <script src="../javascript/views/Field/field.section.view.js"                                             ></script>
+    <!--- Character --->
+    <script src="../javascript/views/Character/character.view.js"                                             ></script>
+    <script src="../javascript/views/Character/player.bench.character.view.js"                                ></script>
+    <script src="../javascript/views/Character/wander.character.view.js"                                      ></script>
+    <!--- Draft --->
+    <script src="../javascript/views/Draft/draft.view.js"                                                     ></script>
+    <script src="../javascript/views/Draft/archetype.draft.view.js"                                           ></script>
+    <script src="../javascript/views/Draft/title.draft.view.js"                                               ></script>
+    <script src="../javascript/views/Draft/ability.draft.view.js"                                             ></script>
+    <script src="../javascript/views/Draft/bench.ability.draft.view.js"                                       ></script>
+    <script src="../javascript/views/Draft/draft.character.view.js"                                           ></script>
+    <!--- Game --->
+    <script src="../javascript/views/Game/game.view.js"                                                       ></script>
     <!--- sketch --->
     <script src="../javascript/sketches/debug.sketch.js" ></script>
 </head>
